<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PanSales</string>

	<string name="hello">Pangram20140425</string>
    <string name="weekday">M-F</string>
    <string name="weekend">S</string>
    <string name="northbound">Northbound</string>
    <string name="southbound">Southbound</string>
    <string name="all">All</string>
    <string name="locate">Locate</string>
    <string name="about">About</string>
    <string name="version">Version {0}</string>
    <string name="timetable_date">Jan 1, 2009 timetable</string>
    <string name="ok">OK</string>
    <string name="wait">Please Wait</string>
    <string name="locating">Locating the nearest Caltrain station.</string>
	<string name="empty">No Contacts in database!</string>
	<string name="contact_intent">Contact Data</string>
    <string name="nameDefault">First Name</string>
    <string name="mobilePhoneDefault">Mobile Phone</string>
    <string name="emailDefault">Email</string>
    <string name="symbolDefault">Simbol</string>
    <string name="priceDefault">Pret</string>
    <string name="clientDefault">Client</string>
    <string name="productDefault">Product</string>
    <string name="piecesDefault">Pieces</string>
    <string name="discountDefault">Discount</string>
    <string name="COUNTRY_LABEL">Country</string>
    <string name="CLIENT_LABEL">Client</string>
    <string name="some_text">Some North American Countries! </string>
    <string name="some_clients">Clienti PANGRAM </string>
    <string name="some_products">Produse PANGRAM </string>
 	<string name="some_hint"> Type here to filter&#8230; </string>

    <string name="user_login">User Login</string>
    <string name="password_is_a_required_field_">Password is a mandatory field...</string>
    <string name="user_login_required">User Login</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    

 	<string name="spinnerClass_title">Selectare Clasa</string>
 	<string name="spinnerGroup_title">Selectare Grupa</string>
 	<string name="spinnerCategory_title">Selectare Categorie</string>
 	
 	    
</resources>
